@@ -28,6 +28,9 @@ Version 2.2
   * Monte (PR#592)
   * Crystal (PR#576)
   * Snowball (PR#589)
+  * CapDL (PR#579)
+  * NuSMV (PR#564)
+  * SAS, Stata (PR#593)
 
 - Added the ability to load lexer and formatter classes directly from files
   with the `-x` command line option and the `lexers.load_lexer_from_file()`
